--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>Business buzzer</h1>
+    <h1>Business buzzer</h1>
+    <h1>Business buzzer</h1>
+    <h1>Business buzzer</h1>
 </body>
 </html>
