--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Business buzzer</h1>
     <h1>Business buzzer</h1>
+    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint eum dicta vel culpa dolorum enim atque repellendus, vitae dignissimos possimus aspernatur ipsa iusto commodi officiis id nemo blanditiis natus obcaecati exercitationem libero sit.</p>
     
 </body>
 </html>
